...

          <View style={styles.modalField}>
            <Text style={styles.label}>Route name</Text>
            <TextInput
              value={routeName}
              onChangeText={setRouteName}
              placeholder="Enter route name"
              placeholderTextColor="#94A3B8"
              style={styles.modalInput}
              autoFocus={true}
            />
          </View>

...
                !routeName.trim() && styles.modalPrimaryButtonDisabled,
              ]}
              disabled={!routeName.trim()}
              onPress={() => createModal.submit(routeName)}
            >
              <Text style={styles.modalPrimaryButtonText}>
                Create New Route
              </Text>
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </Modal>
...
